// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`emits an error if a companion entry point is present when expecting a device entry point 1`] = `
PluginError {
  "message": "Entry point for unrecognised component found: companion",
  "name": "Error",
  "plugin": "componentManifest",
}
`;

exports[`emits an error if a device entry point is present when expecting a companion/settings entry point 1`] = `
PluginError {
  "message": "Entry point for unrecognised component found: device",
  "name": "Error",
  "plugin": "componentManifest",
}
`;

exports[`emits an error if an unrecognised entry point is present when expecting a companion/settings entry point 1`] = `
PluginError {
  "message": "Entry point for unrecognised component found: toaster",
  "name": "Error",
  "plugin": "componentManifest",
}
`;

exports[`emits an error if an unrecognised entry point is present when expecting a device entry point 1`] = `
PluginError {
  "message": "Entry point for unrecognised component found: toaster",
  "name": "Error",
  "plugin": "componentManifest",
}
`;

exports[`emits an error if multiple companion entry points are present 1`] = `
PluginError {
  "message": "Multiple entry points were generated for companion, only one is allowed",
  "name": "Error",
  "plugin": "componentManifest",
}
`;

exports[`emits an error if multiple device entry points are present 1`] = `
PluginError {
  "message": "Multiple entry points were generated for device, only one is allowed",
  "name": "Error",
  "plugin": "componentManifest",
}
`;

exports[`emits an error if multiple settings entry points are present 1`] = `
PluginError {
  "message": "Multiple entry points were generated for settings, only one is allowed",
  "name": "Error",
  "plugin": "componentManifest",
}
`;

exports[`emits an error if no companion entry point is present 1`] = `
PluginError {
  "message": "No entry point was generated for companion component",
  "name": "Error",
  "plugin": "componentManifest",
}
`;

exports[`emits an error if no device entry point is present 1`] = `
PluginError {
  "message": "No entry point was generated for device component",
  "name": "Error",
  "plugin": "componentManifest",
}
`;

exports[`when there is a companion entry point present builds a companion manifest 1`] = `
Object {
  "apiVersion": "1.0.0",
  "buildId": "0x0f75775f470c1585",
  "bundleDate": "2018-06-27T00:00:00.000Z",
  "companion": Object {
    "main": "companion/index.js",
  },
  "manifestVersion": 2,
  "name": "My App",
  "requestedPermissions": Array [],
  "uuid": "b4ae822e-eca9-4fcb-8747-217f2a1f53a1",
}
`;

exports[`when there is a companion entry point present emits an error if project has settings but no settings entry point 1`] = `
PluginError {
  "message": "No entry point was generated for settings component",
  "name": "Error",
  "plugin": "componentManifest",
}
`;

exports[`when there is a companion entry point present sets app cluster storage related fields if configured 1`] = `
Object {
  "apiVersion": "1.0.0",
  "appClusters": Array [
    "a.storage.group",
  ],
  "buildId": "0x0f75775f470c1585",
  "bundleDate": "2018-06-27T00:00:00.000Z",
  "companion": Object {
    "main": "companion/index.js",
  },
  "developerProfileId": "f00df00d-f00d-f00d-f00d-f00df00df00d",
  "manifestVersion": 2,
  "name": "My App",
  "requestedPermissions": Array [],
  "uuid": "b4ae822e-eca9-4fcb-8747-217f2a1f53a1",
}
`;

exports[`when there is a companion entry point present when there is a settings entry point present builds a companion manifest with settings 1`] = `
Object {
  "apiVersion": "1.0.0",
  "buildId": "0x0f75775f470c1585",
  "bundleDate": "2018-06-27T00:00:00.000Z",
  "companion": Object {
    "main": "companion/index.js",
  },
  "manifestVersion": 2,
  "name": "My App",
  "requestedPermissions": Array [],
  "settings": Object {
    "main": "settings/index.js",
  },
  "uuid": "b4ae822e-eca9-4fcb-8747-217f2a1f53a1",
}
`;

exports[`when there is a device entry point present builds a device manifest for a clock 1`] = `
Object {
  "apiVersion": "1.0.0",
  "appManifestVersion": 1,
  "appType": "clockface",
  "buildId": "0x0f75775f470c1585",
  "bundleDate": "2018-06-27T00:00:00.000Z",
  "i18n": Object {
    "en": Object {
      "name": "My App",
    },
    "fr": Object {
      "name": "Mon application",
    },
  },
  "main": "device/index.js",
  "name": "My App",
  "requestedPermissions": Array [],
  "svgMain": "resources/index.gui",
  "svgWidgets": "resources/widgets.gui",
  "uuid": "b4ae822e-eca9-4fcb-8747-217f2a1f53a1",
}
`;

exports[`when there is a device entry point present builds a device manifest for an app 1`] = `
Object {
  "apiVersion": "1.0.0",
  "appManifestVersion": 1,
  "appType": "app",
  "buildId": "0x0f75775f470c1585",
  "bundleDate": "2018-06-27T00:00:00.000Z",
  "i18n": Object {
    "en": Object {
      "name": "My App",
    },
    "fr": Object {
      "name": "Mon application",
    },
  },
  "iconFile": "resources/icon.png",
  "main": "device/index.js",
  "name": "My App",
  "requestedPermissions": Array [],
  "svgMain": "resources/index.gui",
  "svgWidgets": "resources/widgets.gui",
  "uuid": "b4ae822e-eca9-4fcb-8747-217f2a1f53a1",
  "wipeColor": "#ffaabb",
}
`;

exports[`when there is a device entry point present when there are compiled language files ensures the default language en is the first key in the i18n object 1`] = `"{\\"appManifestVersion\\":1,\\"main\\":\\"device/index.js\\",\\"svgMain\\":\\"resources/index.gui\\",\\"svgWidgets\\":\\"resources/widgets.gui\\",\\"appType\\":\\"clockface\\",\\"apiVersion\\":\\"1.0.0\\",\\"buildId\\":\\"0x0f75775f470c1585\\",\\"bundleDate\\":\\"2018-06-27T00:00:00.000Z\\",\\"uuid\\":\\"b4ae822e-eca9-4fcb-8747-217f2a1f53a1\\",\\"name\\":\\"My App\\",\\"requestedPermissions\\":[],\\"i18n\\":{\\"en\\":{\\"name\\":\\"My App\\",\\"resources\\":\\"lang/english\\"},\\"fr\\":{\\"name\\":\\"Mon application\\"},\\"es\\":{\\"resources\\":\\"spanish/language\\"}}}"`;

exports[`when there is a device entry point present when there are compiled language files ensures the default language es is the first key in the i18n object 1`] = `"{\\"appManifestVersion\\":1,\\"main\\":\\"device/index.js\\",\\"svgMain\\":\\"resources/index.gui\\",\\"svgWidgets\\":\\"resources/widgets.gui\\",\\"appType\\":\\"clockface\\",\\"apiVersion\\":\\"1.0.0\\",\\"buildId\\":\\"0x0f75775f470c1585\\",\\"bundleDate\\":\\"2018-06-27T00:00:00.000Z\\",\\"uuid\\":\\"b4ae822e-eca9-4fcb-8747-217f2a1f53a1\\",\\"name\\":\\"My App\\",\\"requestedPermissions\\":[],\\"i18n\\":{\\"es\\":{\\"resources\\":\\"spanish/language\\"},\\"en\\":{\\"name\\":\\"My App\\",\\"resources\\":\\"lang/english\\"},\\"fr\\":{\\"name\\":\\"Mon application\\"}}}"`;

exports[`when there is a device entry point present when there are compiled language files sets the i18n[lang].resources key for language files that pass through 1`] = `
Object {
  "apiVersion": "1.0.0",
  "appManifestVersion": 1,
  "appType": "clockface",
  "buildId": "0x0f75775f470c1585",
  "bundleDate": "2018-06-27T00:00:00.000Z",
  "i18n": Object {
    "en": Object {
      "name": "My App",
      "resources": "lang/english",
    },
    "es": Object {
      "resources": "spanish/language",
    },
    "fr": Object {
      "name": "Mon application",
    },
  },
  "main": "device/index.js",
  "name": "My App",
  "requestedPermissions": Array [],
  "svgMain": "resources/index.gui",
  "svgWidgets": "resources/widgets.gui",
  "uuid": "b4ae822e-eca9-4fcb-8747-217f2a1f53a1",
}
`;
